// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Box > boxShadowSize prop sets box-shadow 1`] = `
<DocumentFragment>
  <div
    class="cMczSr"
  >
    <div
      class="liWhWl"
    />
  </div>
</DocumentFragment>
`;

exports[`Box > color prop sets color 1`] = `
<DocumentFragment>
  <div
    class="cMczSr"
  >
    <div
      class="inmfTJ"
      color="blue"
    />
  </div>
</DocumentFragment>
`;

exports[`Box > m prop sets margin 1`] = `
<DocumentFragment>
  <div
    class="cMczSr"
  >
    <div
      class="bAeKOk"
    />
  </div>
</DocumentFragment>
`;

exports[`Box > maxHeight, maxWidth, minHeight, minWidth 1`] = `
<DocumentFragment>
  <div
    class="cMczSr"
  >
    <div
      class="gXVrDr"
    />
  </div>
</DocumentFragment>
`;

exports[`Box > p prop sets padding 1`] = `
<DocumentFragment>
  <div
    class="cMczSr"
  >
    <div
      class="hgdKtj"
    />
  </div>
</DocumentFragment>
`;

exports[`Box > renders 1`] = `
<DocumentFragment>
  <div
    class="cMczSr"
  >
    <div
      class="cETxcT"
    />
  </div>
</DocumentFragment>
`;

exports[`Box > width and height props set width/height 1`] = `
<DocumentFragment>
  <div
    class="cMczSr"
  >
    <div
      class="gTAEUK"
      height="50%"
      width="0.5"
    />
  </div>
</DocumentFragment>
`;
